--- a/css/homepage.css
+++ b/css/homepage.css
@@ -1631,7 +1631,7 @@ header a{
   display: block;
   left: 20%;
   z-index: -1;
-  transition:top 0.3s;
+  /* transition:top 0.3s; */
   pointer-events: none;
 }
 #vidbg path{
